Modernize from Java 8/Spring Boot 2.7.2 to Java 21/Spring Boot 3.2.5
- Upgrade Java version from 1.8 to 21
- Upgrade Spring Boot from 2.7.2 to 3.2.5
- Upgrade Spring Security to 6.2.4, Spring Kafka to 3.1.4, Spring Cloud to 2023.0.1
- Replace springdoc-openapi-ui with springdoc-openapi-starter-webmvc-ui 2.4.0
- Replace spring-cloud-starter-sleuth with micrometer-tracing-bridge-brave
- Update Jackson 2.16.1, PostgreSQL 42.7.3, Kafka clients 3.7.0, jjwt 0.12.5
- Migrate all javax.persistence/servlet/validation to jakarta namespace
- Migrate javax.annotation.PostConstruct to jakarta.annotation.PostConstruct
- Modernize Spring Security: WebSecurityConfigurerAdapter to SecurityFilterChain
- Migrate antMatchers() to requestMatchers()
- Update Hibernate 6: remove @GenericGenerator/@Type, use GenerationType.UUID
- Update Spring Data 3: add ListCrudRepository for save()/findAll()
- Update ResponseEntityExceptionHandler for HttpStatusCode signatures
- Migrate jjwt 0.12.x API: parser(), parseSignedClaims(), new builder API
- Update springdoc GroupedOpenApi import path
- Java 21 features: text blocks, Optional.orElseThrow(), List.of(), parameterized logging
- Replace com.jayway.jsonpath.internal.Utils with String.valueOf()

Co-Authored-By: alexmacneil2@gmail.com <alexmacneil2@gmail.com>